# oreilly-tf-book-win

./: 11_training_deep_neural_networks.ipynb  16_nlp_with_rnns_and_attention.ipynb  Untitled.ipynb  freeze.txt  path.txt  pyproject.toml  requirements.txt  setenv.bat
