[tool.poetry]
name = "oreilly-tf-book-win"
version = "0.1.0"
description = ""
authors = ["Shawn Cicoria <github@cicoria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphviz = "*"
gym = {version = "==0.15.4", extras = ["atari"]}
imageio = "==2.6.1"
ipywidgets = "==7.5.1"
joblib = "==0.14.0"
jupyter = "==1.0.0"
matplotlib = "==3.1.2"
nbdime = "==1.1.0"
nltk = "==3.4.5"
numexpr = "==2.7.0"
numpy = "==1.17.3"
opencv-python = "==4.1.2.30"
pandas = "==0.25.3"
pillow = "==8.1.1"
pydot = "==1.4.1"
pyglet = "==1.3.2"
requests = "==2.22.0"
scikit-image = "==0.16.2"
scikit-learn = "==0.22"
scipy = "==1.3.1"
tensorboard = "==2.0.0"
tensorflow = "==2.0.1"
tensorflow-datasets = "==1.3.0"
tensorflow-hub = "==0.6.0"
tensorflow-probability = "==0.7"
tensorflow-serving-api = "==2.0.0"
tf-agents = "==0.3.0rc0"
tqdm = "==4.40.0"
urlextract = "==0.13.0"
xgboost = "==0.90"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
